# living-automated-knowledge-engine

./: .gitignore  404.html  README.md  cdk.json  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.amazonq/cli-agents/: developer.json
.amazonq/rules/: project.md
.github/workflows/: docs.yml
cloudformation/: LAKEDeploymentStack.yaml
docs/: README.md
lambda/email-processor/: pyproject.toml
lambda/email-processor/src/: handler.py  models.py
lambda/email-processor/src/clients/: __init__.py  s3_operations.py
lambda/email-processor/src/services/: __init__.py  attachment_processor.py  command_processor.py  email_parser.py  response_sender.py
lambda/metadata-analytics/: .gitignore  Makefile  README.md  example.py  pyproject.toml  test_handler_local.py
lambda/metadata-analytics/src/: __init__.py  handler.py
lambda/metadata-analytics/src/agents/: __init__.py  analytics_agent.py
lambda/metadata-analytics/src/collector/: __init__.py  metadata_collector.py  models.py
lambda/metadata-analytics/src/utils/: __init__.py  chart_generator.py  pdf_generator.py  s3_operations.py
lambda/metadata-analytics/tests/: test_chart_generator.py  test_metadata_collector.py
lambda/metadata-analytics/tests/fixtures/: sample_metadata.json
lambda/metadata-generator/: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
lambda/metadata-generator/src/: __init__.py  handler.py
lambda/metadata-generator/src/clients/: bedrock_client.py  s3_operations.py
lambda/metadata-generator/src/config/: config.yaml
lambda/metadata-generator/src/core/: __init__.py  config_loader.py  metadata_generator.py  schema.py
lambda/metadata-generator/src/services/: event_parser.py  file_parser.py  json_extractor.py  prompt_builder.py  rule_matcher.py
lambda/metadata-generator/tests/: __init__.py  test_config_loader.py  test_event_parser.py  test_file_parser.py  test_generate_metadata_integration.py  test_integration.py  test_json_extractor.py  test_pattern_matching.py  test_prompt_builder.py  test_rule_matcher.py  test_s3_metadata_format.py
lib/: living-automated-knowledge-engine-stack.ts
lib/constructs/: lake-agent.ts  lake-email-processor.ts  metadata-analytics-agent.ts
search/: search_index.json
spec/: design.md  design_config.md  design_mail.md  proposal.md  requirement.md  user-story.md
test/: living-automated-knowledge-engine.test.ts
